@@ -599,11 +599,9 @@ void    DoIndent(int i)
             InsertChar('\t');
       for(; j>0; j--)
          InsertChar(' ');
-      offs prev=CurrentPos;
-      MoveDown();
-      ToLineBegin();
-      if(prev>=CurrentPos)
-	 break;	  // break if no eol was found on the line.
+      MoveRight();
+      while(!Bol() && !Eof())
+	 MoveRight();
    }
    while(CurrentPos<BlockEnd);
    BlockEnd=CurrentPos;
@@ -654,11 +652,9 @@ void    DoUnindent(int i)
             InsertChar('\t');
       for(; j>0; j--)
          InsertChar(' ');
-      offs prev=CurrentPos;
-      MoveDown();
-      ToLineBegin();
-      if(prev>=CurrentPos)
-	 break;	  // break if no eol was found on the line.
+      MoveRight();
+      while(!Bol() && !Eof())
+	 MoveRight();
    }
    while(CurrentPos<BlockEnd);
    BlockEnd=CurrentPos;
